source3/smbd/ntquotas.c
@@ -226,6 +226,9 @@ int vfs_get_user_ntquota_list(files_struct *fsp, SMB_NTQUOTA_LIST **qt_list)
 	}
 	endpwent();
 
+	if (*qt_list == NULL) {
+		TALLOC_FREE(mem_ctx);
+	}
 	return 0;
 }
 
